2010-09-22  Eli Zaretskii  <eliz@gnu.org>

	* minibuf.c (Fminibuffer_contents)
	(Fminibuffer_contents_no_properties)
	(Fminibuffer_completion_contents): Use EMACS_INT for minibuffer
	positions.

	* keyboard.c (command_loop_1): Use EMACS_INT to compare point with
	mark.

	* alloc.c (make_uninit_string, make_uninit_multibyte_string)
	(allocate_string_data): Accept EMACS_INT for string length.

	* editfns.c (Ffield_string, Ffield_string_no_properties)
	(make_buffer_string, make_buffer_string_both, Fbuffer_substring)
	(Fbuffer_substring_no_properties, find_field, Fdelete_field)
	(Ffield_string, Ffield_string_no_properties, Ffield_beginning)
	(Ffield_end): Use EMACS_INT for buffer positions.

	* insdel.c (prepare_to_modify_buffer): Use EMACS_INT to compare
	point with mark.

	* lisp.h (allocate_string_data, make_uninit_string)
	(make_uninit_multibyte_string, make_buffer_string)
	(make_buffer_string_both): Adjust prototypes.

2010-09-22  Chong Yidong  <cyd@stupidchicken.com>

	* xml.c: Switch to GNU indentation.
	(make_dom): Change parse tree format to match xml.el.
	(Fxml_parse_html_string_internal): Rename from html-parse-string.
	(Fxml_parse_string_internal): Rename from xml-parse-string.

2010-09-22  Kenichi Handa  <handa@m17n.org>

	* xdisp.c (compute_stop_pos): Call composition_compute_stop_pos
	only if we are not at a composition.
	(set_iterator_to_next): Give it->end_charpos to
	composition_compute_stop_pos.
	(set_iterator_to_next, next_element_from_buffer): Likewise.

	* dispnew.c (buffer_posn_from_coords): Fix position when the
	current display element is a grapheme cluster in bidi-reordered
	region.

2010-09-21  Ari Roponen  <ari.roponen@gmail.com>  (tiny change)

	* doc.c (Fsnarf_documentation): Use memmove instead of memcpy as
	the regions may overlap.

2010-09-21  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in ($(BLD)/sysdep.$(O)): Update dependencies.

2010-09-21  Dan Nicolaescu  <dann@ics.uci.edu>
