@@ -1,3 +1,8 @@
+2010-09-22  Juanma Barranquero  <lekktu@gmail.com>
+            Eli Zaretskii  <eliz@gnu.org>
+
+	* w32.c (get_emacs_configuration_options): Fix buffer overrun.
+
 2010-09-22  Eli Zaretskii  <eliz@gnu.org>
 
 	* minibuf.c (Fminibuffer_contents)
